feat(custom): 🐛 make basic input

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -12,4 +12,23 @@
 
 .react-qwerty {
     color: var(--color);
+
+    .tiptap {
+        &:focus {
+            outline: none;
+        }
+
+        p.is-editor-empty:first-child::before {
+            color: #adb5bd;
+            content: attr(data-placeholder);
+            float: left;
+            height: 0;
+            pointer-events: none;
+        }
+
+        hr {
+            border-color: var(--border);
+        }
+    }
+
 }
