--- a/src/atoms/container/container.module.scss
+++ b/src/atoms/container/container.module.scss
@@ -1,6 +1,6 @@
 .base {
     display: block;
-    border: 1px solid var(--border);
+    border: 1px solid rgb(var(--border));
     border-radius: 6px;
     box-sizing: border-box;
     overflow: hidden;
