--- a/src/atoms/spacer/spacer.module.scss
+++ b/src/atoms/spacer/spacer.module.scss
@@ -5,12 +5,12 @@
     &--x {
         width: var(--size, 10px);
         height: 1px;
-        border-bottom: 1px solid var(--border);
+        border-bottom: 1px solid rgb(var(--border));
     }
 
     &--y {
         width: 1px;
         height: var(--size, 10px);
-        border-right: 1px solid var(--border);
+        border-right: 1px solid rgb(var(--border));
     }
 }
