--- a/src/atoms/toolbar/toolbar.module.scss
+++ b/src/atoms/toolbar/toolbar.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     gap: 2px;
-    background-color: var(--background);
-    border-bottom: 1px solid var(--border);
+    background-color: rgb(var(--background));
+    border-bottom: 1px solid rgb(var(--border));
     padding: 0.5em;
 }
