--- a/src/atoms/content/content.module.scss
+++ b/src/atoms/content/content.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 1em 2em;
+    background: rgb(var(--background));
 
     &Editor {
         display: block;
